2006-11-07  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/utils.c, src/highlighting.c, src/utils.h, src/callbacks.c,
   src/sci_cb.c, src/document.c, src/symbols.c, src/ui_utils.c,
   src/symbols.h:
   Move utils_get_tag_list() to symbols.c, make utils_find_tm_tag()
   static.
   Move symbols_get_global_keywords() to get_global_typenames() in
   highlighting.c.
   Add symbols_find_tags_as_string(), symbols_get_tag_list(),
   symbols_get_macro_list(), symbols_find_in_workspace() from various
   tag-related existing code.
 * src/ui_utils.c:
   Never show the Sidebar if app->show_sidebar is false (prevents
   showing Sidebar after setting Preferences, when user has chosen to
   hide the Sidebar).
 * src/utils.c, src/utils.h, src/about.c, src/callbacks.c,
   src/sci_cb.c, src/keyfile.c, src/search.c, src/encodings.c,
   src/document.c, src/prefs.c, src/gb.c, src/symbols.c:
   Rename utils_strcmp() utils_str_equal() (to avoid return value
   confusion with strcmp()).


2006-11-07  Enrico Tröger  <enrico.troeger@uvena.de>

 * src/treeviews.c: Fixed unintentional appearance of sidebar after it
                    was hidden and the preferences dialog was closed.
 * data/filetypes.common, src/highlighting.c:
   Added an option to draw an horizontal line above or below folded
   text.
 * src/dialogs.c: Don't set width of file open dialog.


2006-11-07  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/win32.c, src/win32.h, src/callbacks.c, src/keyfile.c,
   src/dialogs.c, src/dialogs.h:
   Don't close any tabs when quitting until all unsaved changes have
   been accounted for; switch to each unsaved file before showing the
   unsaved dialog.
   Remove limit of ~256 chars for session filenames.
   Make dialogs_show_unsaved_file() fail if the Save As dialog was
   cancelled.


2006-11-06  Enrico Tröger  <enrico.troeger@uvena.de>

 * data/filetypes.java, src/highlighting.c:
   Added Java keywords true and false.
   Converted "NULL" to lower case.